--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,16 @@
 
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Space+Mono" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css?v1">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112911329-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-112911329-1');
+    </script>
 </head>
 
 <body>
